# oz_fastapi_study

./: .gitignore  README.md  pyproject.toml
homework/: docker-compose.yml
homework/src/: alembic.ini  main.py
homework/src/common/: post_construct.py
homework/src/common/handlers/: exception_handler.py  middleware_handler.py  router_handler.py
homework/src/core/: config.py  email.py
homework/src/core/authenticate/: constants.py  dto.py  services.py
homework/src/core/database/: connection.py  connection_async.py  orm.py
homework/src/exceptions/: dto.py  exception_handler.py
homework/src/products/: dto.py  router.py  routers.py
homework/src/products/domains/: product.py
homework/src/products/dto/: ProductCreateRequestDto.py  ProductResponseDto.py  ProductUpdateRequestDto.py
homework/src/products/dtos/: reqeusts.py
homework/src/tests/: conftest.py  test_router.py
homework/src/users/: dto.py  models.py  repository.py  router.py  router_async.py  services.py
homework/src/users/domain/: User.py
homework/src/users/domains/: user.py
homework/src/users/dto/: UserCreateRequestDto.py  UserResponseDto.py  UserSignRequestDto.py  UserUpdateRequestDto.py
homework/src/users/dtos/: requests.py  responses.py
homework/src/users/exceptions/: custom_exceptions.py
homework/src/users/repository/: UserAsyncRepository.py  UserRepository.py
homework/src/users/repositorys/: user_async_repository.py  user_repository.py
homework/src/users/router/: routers.py  routers_async.py
src/: main.py
src/users/: request.py  router.py
(+21 files in other folders)
